# WinAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/werctl/: CMakeLists.txt  resources.rc  werctl.cpp  werctl.exe.manifest
demo/: CMakeLists.txt
demo/splashscreen/: CMakeLists.txt  app-main.cpp  launcher-main.cpp  resource.h  resource.rc
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt
modules/base/WinAPI/: ErrorCode.cpp  ErrorCode.h  ErrorMessage.cpp  ErrorMessage.h  Event.cpp  Event.h  EventImpl.h  Exception.cpp  Exception.h  Process.cpp  Process.h  ProcessEnvironment.cpp  ProcessEnvironment.h  Registry.cpp  Registry.h  String.cpp  String.h  WindowsErrorReporting.cpp  WindowsErrorReporting.h  WindowsRegistry.h  comptr.h  processpriv.h  registry_priv.h
modules/launcher/: CMakeLists.txt
modules/launcher/WinAPI/: Launcher.cpp  Launcher.h  SplashScreen.cpp  SplashScreen.h  splashscreen_priv.h
